--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ h2::before{
 
 }
 
-#check::before{
+.check::before{
     content: '\2713';
     width: 100px;
     height: 100px;
@@ -114,7 +114,7 @@ ul > li {
 /* Prima Section */
 
 /* Seconda Section */
-#false:before {
+.false:before {
     content: ' \2718';
     width: 80px;
     height: 80px;
